--- a/views/touristSpots/show.ejs
+++ b/views/touristSpots/show.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/stars.css">
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-md-6">
 
         <div id="touristSpotCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -49,12 +49,12 @@
         </div>
     </div>
 
-    <div class="col-6">
+    <div class="col-md-6">
 
         <div id="map"></div>
 
         <% if(currentUser){ %>
-        <h2>Leave a Review</h2>
+        <h2 class="mt-2">Leave a Review</h2>
         <form action="/touristSpots/<%=touristSpot._id %>/reviews" method="post" class="mb-3 validated-form" novalidate>
             <fieldset class="starability-basic">
                 <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="5" checked
@@ -76,8 +76,10 @@
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
+        <% }else{ %>
+            <a class="btn btn-sm btn-secondary my-3" href="/login">Login to leave a Review</a>
         <% } %>
-
+        
         <% for(let review of touristSpot.reviews) { %>
         <div class="card mb-3">
             <div class="card-body">
