--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -20,9 +20,10 @@
                             <label class="form-label" for="password">Password</label>
                             <input class="form-control" type="password" id="password" name="password" required>
                         </div>
-                        <button class="btn btn-success btn-block">Register</button>
+                        <div class="d-grid">
+                            <button class="btn btn-success btn-block">Register</button>
+                        </div>
                     </form>
-
                 </div>
             </div>
         </div>
