--- a/views/touristSpots/index.ejs
+++ b/views/touristSpots/index.ejs
@@ -2,10 +2,7 @@
 
 <div id="cluster-map"></div>
 
-<h1>All TouristSpots</h1>
-<div>
-    <a href="/touristSpots/new">Add TouristSpot</a>
-</div>
+<h1>All Tourist Spots</h1>
 
 <% for (let touristSpot of touristSpots){%>
 <div class="card mb-3">
@@ -22,12 +19,18 @@
                 <h5 class="card-title"><%= touristSpot.title %></h5>
                 <p class="card-text"><%= touristSpot.description %></p>
                 <p class="card-text"><small class="text-muted"><%= touristSpot.location %></small></p>
-                <a class="btn btn-primary" href="/touristSpots/<%= touristSpot._id %>">View <%= touristSpot.title %></a>
+                <div class="d-flex">
+                <a class="btn btn-primary mx-auto mx-md-0" href="/touristSpots/<%= touristSpot._id %>">View <%= touristSpot.title %></a>
+            </div>
             </div>
         </div>
     </div>
 </div>
 <% }%>
+
+<div class="mb-3">
+    <a href="/touristSpots/new">Add Tourist Spot</a>
+</div>
 
 <script>
     const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
