--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -18,7 +18,9 @@
                             <label class="form-label" for="password">Password</label>
                             <input class="form-control" type="password" id="password" name="password" required>
                         </div>
-                        <button class="btn btn-success btn-block">Login</button>
+                        <div class="d-grid">
+                            <button class="btn btn-success">Login</button>
+                        </div>
                     </form>
                 </div>
             </div>
