updated images and added screenshots to the readme

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -7,3 +7,11 @@
     width: 100%;
     height: 300px;
 }
+
+body  {
+    background-color: ghostwhite;
+}
+
+.btn-light{
+    border-color: darkgrey;
+}
