--- a/views/touristSpots/new.ejs
+++ b/views/touristSpots/new.ejs
@@ -35,6 +35,6 @@
                 <button class="btn btn-success">Add Tourist Spot</button>
             </div>
         </form>
-        <a href="/touristSpots">All Tourist Spots</a>
+        <a href="/touristSpots">Back to all Tourist Spots</a>
     </div>
 </div>
