--- a/views/touristSpots/show.ejs
+++ b/views/touristSpots/show.ejs
@@ -71,13 +71,12 @@
                 <label for="first-rate5" title="Amazing">5 stars</label>
             </fieldset>
             <div class="mb-3">
-                <label class="form-label" for="body">Review</label>
                 <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
         <% }else{ %>
-            <a class="btn btn-sm btn-secondary my-3" href="/login">Login to leave a Review</a>
+            <a class="btn btn-sm btn-secondary my-3" href="/login">Login to leave a review</a>
         <% } %>
         
         <% for(let review of touristSpot.reviews) { %>
