--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
             </div>
         </header>
 
-        <main class="px-3">
+        <main class="px-md-3">
             <h1>TouristSpotsReviews</h1>
             <p class="lead"> Welcome to TouristSpotsReviews! <br> Jump right in and explore our many locations. <br>
                 Feel free to share some of your own and comment on others!</p>
