--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark py-3 mt-auto">
-    <div class="container">
+    <div class="container d-flex justify-content-center">
         <span class="text-muted">&copy;TouristSpotsReviews 2021</span>
     </div>
 </footer>
