--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -4,9 +4,9 @@
     <div class="row">
         <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
             <div class="card shadow">
-                <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+                <img src="https://images.unsplash.com/photo-1562107383-999fee2d5772?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1267&q=80"
                     alt="" class="card-img-top" />
-                <div class="card-body">
+                <div class="card-body ">
                     <h5 class="card-title">Login</h5>
                     <form action="/login" method="POST" class="validated-form" novalidate>
                         <div class="mb-3">
@@ -20,6 +20,9 @@
                         </div>
                         <div class="d-grid">
                             <button class="btn btn-success">Login</button>
+                        </div>
+                        <div class="d-grid justify-content-center mt-3">
+                            <p>New here? <a href="/register">Sign Up</a></p>
                         </div>
                     </form>
                 </div>
